lab1/parser.output
Terminals unused in grammar

   SWITCH
   CASE
   COLON
   DEFAULT
   EXT_DEF_LIST
   EXT_VAR_DEF
   FUNC_DEF
   FUNC_DEC
   EXT_DEC_LIST
   PARAM_LIST
   PARAM_DEC
   VAR_DEF
   DEC_LIST
   DEF_LIST
   COMP_STM
   STM_LIST
   EXP_STMT
   IF_THEN
   IF_THEN_ELSE
   FUNC_CALL
   ARGS
   FUNCTION
   PARAM
   ARG
   CALL
   LABEL
   GOTO
   JLT
   JLE
   JGT
   JGE
   EQ
   NEQ
   ARRAY_DEC
   FOR_DEC
   CONTINUE_NODE
   BREAK_NODE
   BLANK
   ARRAY_DF
   FOR_EXP1
   FOR_EXP2
   FOR_EXP3
   FOR_NODE
   ARRAY_CALL
   DPLUS


状态 23 conflicts: 1 shift/reduce
状态 38 conflicts: 1 shift/reduce
状态 78 conflicts: 1 shift/reduce
状态 79 conflicts: 1 shift/reduce
状态 84 conflicts: 1 shift/reduce
状态 85 conflicts: 1 shift/reduce
状态 123 conflicts: 1 shift/reduce
状态 125 conflicts: 1 shift/reduce
状态 126 conflicts: 1 shift/reduce
状态 127 conflicts: 1 shift/reduce
状态 128 conflicts: 1 shift/reduce
状态 129 conflicts: 1 shift/reduce
状态 130 conflicts: 1 shift/reduce
状态 131 conflicts: 1 shift/reduce
状态 132 conflicts: 1 shift/reduce
状态 133 conflicts: 1 shift/reduce
状态 134 conflicts: 1 shift/reduce
状态 135 conflicts: 1 shift/reduce
状态 136 conflicts: 1 shift/reduce
状态 137 conflicts: 1 shift/reduce


语法

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 VarDec: ID
   11       | ID ArrayDec

   12 ArrayDec: LB INDEX RB
   13         | LB INDEX RB ArrayDec
   14         | error RB

   15 INDEX: INT

   16 FuncDec: ID LP VarList RP
   17        | ID LP RP
   18        | error RP

   19 VarList: ParamDec
   20        | ParamDec COMMA VarList

   21 ParamDec: Specifier VarDec

   22 CompSt: LC DefList StmList RC
   23       | error RC

   24 StmList: %empty
   25        | Stmt StmList

   26 Stmt: Exp SEMI
   27     | CompSt
   28     | RETURN Exp SEMI
   29     | IF LP Exp RP Stmt
   30     | IF LP Exp RP Stmt ELSE Stmt
   31     | WHILE LP Exp RP Stmt
   32     | FOR LP FORDEC RP Stmt
   33     | BREAK SEMI
   34     | CONTINUE SEMI
   35     | SEMI

   36 FORDEC: FOREXP1 SEMI FOREXP2 SEMI FOREXP3
   37       | FOREXP1 SEMI SEMI FOREXP3
   38       | FOREXP1 SEMI FOREXP2 SEMI
   39       | FOREXP1 SEMI SEMI
   40       | SEMI FOREXP2 SEMI FOREXP3
   41       | SEMI FOREXP2 SEMI
   42       | SEMI SEMI FOREXP3
   43       | SEMI SEMI

   44 FOREXP1: DecList
   45        | Specifier DecList

   46 FOREXP2: Exp COMMA FOREXP2
   47        | Exp

   48 FOREXP3: Exp COMMA FOREXP3
   49        | Exp

   50 DefList: %empty
   51        | Def DefList
   52        | error SEMI

   53 Def: Specifier DecList SEMI

   54 DecList: Dec
   55        | Dec COMMA DecList

   56 Dec: VarDec
   57    | VarDec ASSIGNOP Exp

   58 Exp: Exp ASSIGNOP Exp
   59    | Exp AND Exp
   60    | Exp OR Exp
   61    | Exp RELOP Exp
   62    | Exp PLUS Exp
   63    | Exp MINUS Exp
   64    | Exp STAR Exp
   65    | Exp DIV Exp
   66    | Exp MOD Exp
   67    | Exp COMADD Exp
   68    | Exp COMSUB Exp
   69    | Exp COMSTAR Exp
   70    | Exp COMDIV Exp
   71    | Exp COMMOD Exp
   72    | LP Exp RP
   73    | MINUS Exp
   74    | NOT Exp
   75    | AUTOADD Exp
   76    | Exp AUTOADD
   77    | AUTOSUB Exp
   78    | Exp AUTOSUB
   79    | LB Args RB
   80    | ID LP Args RP
   81    | ID LP RP
   82    | Exp LB Exp RB
   83    | ID
   84    | INT
   85    | FLOAT
   86    | CHAR

   87 Args: Exp COMMA Args
   88     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 14 18 23 52
INT (258) 15 84
ID (259) 10 11 16 17 80 81 83
RELOP (260) 61
TYPE (261) 7
CHAR (262) 86
FLOAT (263) 85
LP (264) 16 17 29 30 31 32 72 80 81
RP (265) 16 17 18 29 30 31 32 72 80 81
LB (266) 12 13 79 82
RB (267) 12 13 14 79 82
LC (268) 22
RC (269) 22 23
SEMI (270) 4 6 26 28 33 34 35 36 37 38 39 40 41 42 43 52 53
COMMA (271) 9 20 46 48 55 87
COMADD (272) 67
COMSUB (273) 68
COMSTAR (274) 69
COMDIV (275) 70
COMMOD (276) 71
PLUS (277) 62
MINUS (278) 63 73
STAR (279) 64
DIV (280) 65
MOD (281) 66
ASSIGNOP (282) 57 58
AND (283) 59
OR (284) 60
NOT (285) 74
IF (286) 29 30
ELSE (287) 30
WHILE (288) 31
RETURN (289) 28
FOR (290) 32
SWITCH (291)
CASE (292)
COLON (293)
DEFAULT (294)
AUTOADD (295) 75 76
AUTOSUB (296) 77 78
BREAK (297) 33
CONTINUE (298) 34
EXT_DEF_LIST (299)
EXT_VAR_DEF (300)
FUNC_DEF (301)
FUNC_DEC (302)
EXT_DEC_LIST (303)
PARAM_LIST (304)
PARAM_DEC (305)
VAR_DEF (306)
DEC_LIST (307)
DEF_LIST (308)
COMP_STM (309)
STM_LIST (310)
EXP_STMT (311)
IF_THEN (312)
IF_THEN_ELSE (313)
FUNC_CALL (314)
ARGS (315)
FUNCTION (316)
PARAM (317)
ARG (318)
CALL (319)
LABEL (320)
GOTO (321)
JLT (322)
JLE (323)
JGT (324)
JGE (325)
EQ (326)
NEQ (327)
ARRAY_DEC (328)
FOR_DEC (329)
CONTINUE_NODE (330)
BREAK_NODE (331)
BLANK (332)
ARRAY_DF (333)
FOR_EXP1 (334)
FOR_EXP2 (335)
FOR_EXP3 (336)
FOR_NODE (337)
ARRAY_CALL (338)
UMINUS (339)
DPLUS (340)
LOWER_THEN_ELSE (341)


Nonterminals, with rules where they appear

$accept (87)
    左： 0
program (88)
    左： 1, 右： 0
ExtDefList (89)
    左： 2 3, 右： 1 3
ExtDef (90)
    左： 4 5 6, 右： 3
Specifier (91)
    左： 7, 右： 4 5 21 45 53
ExtDecList (92)
    左： 8 9, 右： 4 9
VarDec (93)
    左： 10 11, 右： 8 9 21 56 57
ArrayDec (94)
    左： 12 13 14, 右： 11 13
INDEX (95)
    左： 15, 右： 12 13
FuncDec (96)
    左： 16 17 18, 右： 5
VarList (97)
    左： 19 20, 右： 16 20
ParamDec (98)
    左： 21, 右： 19 20
CompSt (99)
    左： 22 23, 右： 5 27
StmList (100)
    左： 24 25, 右： 22 25
Stmt (101)
    左： 26 27 28 29 30 31 32 33 34 35, 右： 25 29 30 31 32
FORDEC (102)
    左： 36 37 38 39 40 41 42 43, 右： 32
FOREXP1 (103)
    左： 44 45, 右： 36 37 38 39
FOREXP2 (104)
    左： 46 47, 右： 36 38 40 41 46
FOREXP3 (105)
    左： 48 49, 右： 36 37 40 42 48
DefList (106)
    左： 50 51 52, 右： 22 51
Def (107)
    左： 53, 右： 51
DecList (108)
    左： 54 55, 右： 44 45 53 55
Dec (109)
    左： 56 57, 右： 54 55
Exp (110)
    左： 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76
    77 78 79 80 81 82 83 84 85 86, 右： 26 28 29 30 31 46 47 48 49
    57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 82 87 88
Args (111)
    左： 87 88, 右： 79 80 87


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    program     转到状态 3
    ExtDefList  转到状态 4
    ExtDef      转到状态 5
    Specifier   转到状态 6


State 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 7


State 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    error  shift, and go to state 1
    TYPE   shift, and go to state 2

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList  转到状态 9
    ExtDef      转到状态 5
    Specifier   转到状态 6


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    error  shift, and go to state 10
    ID     shift, and go to state 11

    ExtDecList  转到状态 12
    VarDec      转到状态 13
    FuncDec     转到状态 14


State 7

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


State 8

    0 $accept: program $end .

    $default  接受


State 9

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 10

   18 FuncDec: error . RP

    RP  shift, and go to state 15


State 11

   10 VarDec: ID .
   11       | ID . ArrayDec
   16 FuncDec: ID . LP VarList RP
   17        | ID . LP RP

    error  shift, and go to state 16
    LP     shift, and go to state 17
    LB     shift, and go to state 18

    SEMI   reduce using rule 10 (VarDec)
    COMMA  reduce using rule 10 (VarDec)

    ArrayDec  转到状态 19


State 12

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 13

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList

    COMMA  shift, and go to state 21

    $default  reduce using rule 8 (ExtDecList)


State 14

    5 ExtDef: Specifier FuncDec . CompSt

    error  shift, and go to state 22
    LC     shift, and go to state 23

    CompSt  转到状态 24


State 15

   18 FuncDec: error RP .

    $default  reduce using rule 18 (FuncDec)


State 16

   14 ArrayDec: error . RB

    RB  shift, and go to state 25


State 17

   16 FuncDec: ID LP . VarList RP
   17        | ID LP . RP

    TYPE  shift, and go to state 2
    RP    shift, and go to state 26

    Specifier  转到状态 27
    VarList    转到状态 28
    ParamDec   转到状态 29


State 18

   12 ArrayDec: LB . INDEX RB
   13         | LB . INDEX RB ArrayDec

    INT  shift, and go to state 30

    INDEX  转到状态 31


State 19

   11 VarDec: ID ArrayDec .

    $default  reduce using rule 11 (VarDec)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 32

    ExtDecList  转到状态 33
    VarDec      转到状态 13


State 22

   23 CompSt: error . RC

    RC  shift, and go to state 34


State 23

   22 CompSt: LC . DefList StmList RC

    error  shift, and go to state 35
    TYPE   shift, and go to state 2

    error     [reduce using rule 50 (DefList)]
    INT       reduce using rule 50 (DefList)
    ID        reduce using rule 50 (DefList)
    CHAR      reduce using rule 50 (DefList)
    FLOAT     reduce using rule 50 (DefList)
    LP        reduce using rule 50 (DefList)
    LB        reduce using rule 50 (DefList)
    LC        reduce using rule 50 (DefList)
    RC        reduce using rule 50 (DefList)
    SEMI      reduce using rule 50 (DefList)
    MINUS     reduce using rule 50 (DefList)
    NOT       reduce using rule 50 (DefList)
    IF        reduce using rule 50 (DefList)
    WHILE     reduce using rule 50 (DefList)
    RETURN    reduce using rule 50 (DefList)
    FOR       reduce using rule 50 (DefList)
    AUTOADD   reduce using rule 50 (DefList)
    AUTOSUB   reduce using rule 50 (DefList)
    BREAK     reduce using rule 50 (DefList)
    CONTINUE  reduce using rule 50 (DefList)

    Specifier  转到状态 36
    DefList    转到状态 37
    Def        转到状态 38


State 24

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


State 25

   14 ArrayDec: error RB .

    $default  reduce using rule 14 (ArrayDec)


State 26

   17 FuncDec: ID LP RP .

    $default  reduce using rule 17 (FuncDec)


State 27

   21 ParamDec: Specifier . VarDec

    ID  shift, and go to state 32

    VarDec  转到状态 39


State 28

   16 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 40


State 29

   19 VarList: ParamDec .
   20        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 41

    $default  reduce using rule 19 (VarList)


State 30

   15 INDEX: INT .

    $default  reduce using rule 15 (INDEX)


State 31

   12 ArrayDec: LB INDEX . RB
   13         | LB INDEX . RB ArrayDec

    RB  shift, and go to state 42


State 32

   10 VarDec: ID .
   11       | ID . ArrayDec

    error  shift, and go to state 16
    LB     shift, and go to state 18

    RP        reduce using rule 10 (VarDec)
    SEMI      reduce using rule 10 (VarDec)
    COMMA     reduce using rule 10 (VarDec)
    ASSIGNOP  reduce using rule 10 (VarDec)

    ArrayDec  转到状态 19


State 33

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 34

   23 CompSt: error RC .

    $default  reduce using rule 23 (CompSt)


State 35

   52 DefList: error . SEMI

    SEMI  shift, and go to state 43


State 36

   53 Def: Specifier . DecList SEMI

    ID  shift, and go to state 32

    VarDec   转到状态 44
    DecList  转到状态 45
    Dec      转到状态 46


State 37

   22 CompSt: LC DefList . StmList RC

    error     shift, and go to state 22
    INT       shift, and go to state 47
    ID        shift, and go to state 48
    CHAR      shift, and go to state 49
    FLOAT     shift, and go to state 50
    LP        shift, and go to state 51
    LB        shift, and go to state 52
    LC        shift, and go to state 23
    SEMI      shift, and go to state 53
    MINUS     shift, and go to state 54
    NOT       shift, and go to state 55
    IF        shift, and go to state 56
    WHILE     shift, and go to state 57
    RETURN    shift, and go to state 58
    FOR       shift, and go to state 59
    AUTOADD   shift, and go to state 60
    AUTOSUB   shift, and go to state 61
    BREAK     shift, and go to state 62
    CONTINUE  shift, and go to state 63

    RC  reduce using rule 24 (StmList)

    CompSt   转到状态 64
    StmList  转到状态 65
    Stmt     转到状态 66
    Exp      转到状态 67


State 38

   51 DefList: Def . DefList

    error  shift, and go to state 35
    TYPE   shift, and go to state 2

    error     [reduce using rule 50 (DefList)]
    INT       reduce using rule 50 (DefList)
    ID        reduce using rule 50 (DefList)
    CHAR      reduce using rule 50 (DefList)
    FLOAT     reduce using rule 50 (DefList)
    LP        reduce using rule 50 (DefList)
    LB        reduce using rule 50 (DefList)
    LC        reduce using rule 50 (DefList)
    RC        reduce using rule 50 (DefList)
    SEMI      reduce using rule 50 (DefList)
    MINUS     reduce using rule 50 (DefList)
    NOT       reduce using rule 50 (DefList)
    IF        reduce using rule 50 (DefList)
    WHILE     reduce using rule 50 (DefList)
    RETURN    reduce using rule 50 (DefList)
    FOR       reduce using rule 50 (DefList)
    AUTOADD   reduce using rule 50 (DefList)
    AUTOSUB   reduce using rule 50 (DefList)
    BREAK     reduce using rule 50 (DefList)
    CONTINUE  reduce using rule 50 (DefList)

    Specifier  转到状态 36
    DefList    转到状态 68
    Def        转到状态 38


State 39

   21 ParamDec: Specifier VarDec .

    $default  reduce using rule 21 (ParamDec)


State 40

   16 FuncDec: ID LP VarList RP .

    $default  reduce using rule 16 (FuncDec)


State 41

   20 VarList: ParamDec COMMA . VarList

    TYPE  shift, and go to state 2

    Specifier  转到状态 27
    VarList    转到状态 69
    ParamDec   转到状态 29


State 42

   12 ArrayDec: LB INDEX RB .
   13         | LB INDEX RB . ArrayDec

    error  shift, and go to state 16
    LB     shift, and go to state 18

    RP        reduce using rule 12 (ArrayDec)
    SEMI      reduce using rule 12 (ArrayDec)
    COMMA     reduce using rule 12 (ArrayDec)
    ASSIGNOP  reduce using rule 12 (ArrayDec)

    ArrayDec  转到状态 70


State 43

   52 DefList: error SEMI .

    $default  reduce using rule 52 (DefList)


State 44

   56 Dec: VarDec .
   57    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71

    $default  reduce using rule 56 (Dec)


State 45

   53 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 72


State 46

   54 DecList: Dec .
   55        | Dec . COMMA DecList

    COMMA  shift, and go to state 73

    $default  reduce using rule 54 (DecList)


State 47

   84 Exp: INT .

    $default  reduce using rule 84 (Exp)


State 48

   80 Exp: ID . LP Args RP
   81    | ID . LP RP
   83    | ID .

    LP  shift, and go to state 74

    $default  reduce using rule 83 (Exp)


State 49

   86 Exp: CHAR .

    $default  reduce using rule 86 (Exp)


State 50

   85 Exp: FLOAT .

    $default  reduce using rule 85 (Exp)


State 51

   72 Exp: LP . Exp RP

    INT      shift, and go to state 47
    ID       shift, and go to state 48
    CHAR     shift, and go to state 49
    FLOAT    shift, and go to state 50
    LP       shift, and go to state 51
    LB       shift, and go to state 52
    MINUS    shift, and go to state 54
    NOT      shift, and go to state 55
    AUTOADD  shift, and go to state 60
    AUTOSUB  shift, and go to state 61

    Exp  转到状态 75


State 52

   79 Exp: LB . Args RB
